--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@clerk/nextjs": "^4.29.5",
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-slot": "^1.0.2",
+    "choco": "^0.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.320.0",
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
