--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "choco": "^0.2.1",
     "class-variance-authority": "^0.7.0",
