--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
     "@clerk/themes": "^1.7.9",
+    "@livekit/components-react": "^1.5.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -21,6 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "install": "^0.13.0",
+    "livekit-client": "^2.0.1",
+    "livekit-server-sdk": "^2.0.0",
     "lucide-react": "^0.320.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
