--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "choco": "^0.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.4",
