--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@uploadthing/react": "^6.2.3",
     "choco": "^0.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -42,6 +43,7 @@
     "svix": "^1.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.4.0",
     "usehooks-ts": "^2.12.1",
     "uuid": "^9.0.1",
     "zustand": "^4.5.0"
